Fix package name

--- a/packages/bitcore-lib-grlc/package.json
+++ b/packages/bitcore-lib-grlc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitcore-lib-ltc",
+  "name": "bitcore-lib-grlc",
   "version": "8.25.38",
   "description": "A pure and powerful JavaScript Garlicoin library.",
   "author": "BitPay <dev@bitpay.com>",
